--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Sourabh Yejare</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Welcome<br />
-						To My Portfolio</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>Sourabh Yejare</h1>
+						<h3>Electronics Engineering Student</h3>
+						<p>Sourabh Yejare, a engineering student, excels academically, leads in extracurriculars, and is poised for future endeavors that showcase his enthusiasm<a href="https://html5up.net/license"> <br>Creative Commons license</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Portfolio</a>
 					</header>
 
 				<!-- Nav -->
@@ -40,12 +39,12 @@
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
+						<u class="icons">
+							<li><a href="https://www.linkedin.com/in/sourabh-yejare/" class="icon brands fa-linkedin"><span class="label"><i class="linkedin" aria-hidden="true"></i></span></a></li>
+							<li><a href="https://export-download.canva.com/QQvxk/DAF3WLQQvxk/32/0-4547925317614218148.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJHKNGJLC2J7OGJ6Q%2F20240115%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240115T105048Z&X-Amz-Expires=34504&X-Amz-Signature=2589dd4ee1014690441984623360ced557b331cb55ae2af6c861a802f9782e6e&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%2A%3DUTF-8%27%27%2520YEJARE%2520SOURABH%2520SURESH.pdf&response-expires=Mon%2C%2015%20Jan%202024%2020%3A25%3A52%20GMT" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
+							<li><a href="https://github.com/prasadsyejare" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="mailto:prasadsyejare@gmail.com" class="icon fas fa-envelope"><span class="label">Contact_email</span></a></li>
+						</u>
 					</nav>
 
 				<!-- Main -->
