--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/sourabh-yejare/" class="icon brands fa-linkedin"><span class="label"><i class="linkedin" aria-hidden="true"></i></span></a></li>
-							<li><a href="https://export-download.canva.com/QQvxk/DAF3WLQQvxk/32/0-4547925317614218148.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJHKNGJLC2J7OGJ6Q%2F20240115%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240115T105048Z&X-Amz-Expires=34504&X-Amz-Signature=2589dd4ee1014690441984623360ced557b331cb55ae2af6c861a802f9782e6e&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%2A%3DUTF-8%27%27%2520YEJARE%2520SOURABH%2520SURESH.pdf&response-expires=Mon%2C%2015%20Jan%202024%2020%3A25%3A52%20GMT" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
+							<li><a href="https://drive.google.com/file/d/1AVUbPn_Ur70_yPkJEjdoiCVUexuUh2Yt/view?usp=sharing" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
 							<li><a href="https://github.com/prasadsyejare" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="mailto:prasadsyejare@gmail.com" class="icon fas fa-envelope"><span class="label">Contact_email</span></a></li>
 						</ul>
